Removed overflow: hidden to ensure scrollability

--- a/public/stylesheets/style2.css
+++ b/public/stylesheets/style2.css
@@ -1,3 +1,6 @@
+
+
+
 #logo {
     margin-right: 20px;
     color: rgb(204, 198, 119);
@@ -19,7 +22,6 @@ body {
     /* font-family: Arial, Helvetica, sans-serif; */
     font-family: 'Merriweather', serif;
     background-color:rgb(204, 198, 119);
-    overflow: hidden;
     width: 100%;
 }
 
